--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,7 @@
                     </div>
                     <div>
                         <div>自定义接口</div>
-                        <input class="inputTextClass" placeholder="https://example.com/" id="apiHostInput" />
+                        <input class="inputTextClass" placeholder="https://example.com/" value ="https://openai-proxy.weblab.top/" id="apiHostInput" />
                     </div>
                     <div>
                         <div>自定义API key</div>
