--- a/index.html
+++ b/index.html
@@ -1314,8 +1314,8 @@
                 </div>
                 <div class="divider"></div>
                 <div class="links">
-                    <a href="https://www.66o.co/" target="_blank"
-                        rel="noopener noreferrer">自用国度</a>
+                    <a href="https://weblab.top/" target="_blank"
+                        rel="noopener noreferrer">WebLab.top</a>
                 </div>
             </div>
         </nav>
