--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ChatGPT</title>
+    <title>ChatGPT Lite</title>
     <style>
         * {
             box-sizing: border-box;
