--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
     </div>
     <div id="loadMask">
         <div>
-            <div>ChatGPT</div>
+            <div>ChatGPT Lite</div>
             <svg>
                 <use xlink:href="#loadingIcon" />
             </svg>
@@ -1325,7 +1325,7 @@
                 <div class="button minimize"></div>
                 <div class="button maximize"></div>
             </div>
-            <div class="title">ChatGPT</div>
+            <div class="title">ChatGPT Lite</div>
             <button id="setting">
                 <svg viewBox="0 0 100 100" style="display:block;" role="img" width="30" height="30">
                     <title>设置</title>
