--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             font-family: system-ui;
             font-size: 12px;
             line-height: 18px;
-            color: #555;
+            color: yellowgreen;
             opacity: 0.3;
             outline: none;
             opacity: 1;
