--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,8 @@
                     <div class="presetSelect presetModelCls">
                         <label for="preSetModel">GPT模型</label>
                         <select id="preSetModel">
-                            <option value="gpt-3.5-turbo">gpt-3.5</option>
+			    <option value="gpt-3.5-turbo-16k">gpt-3.5-turbo-16k</option>
+                            <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
                             <option value="gpt-4">gpt-4</option>
                             <option value="gpt-4-32k">gpt-4-32k</option>
                         </select>
